--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,267 @@
-h1 {
-    color: grey;
+@keyframes example {
+  0%{display: none;}
+  33%{display: none;}
+  66%{display: none;}
+  100%{display: none;}
 }
 
-img {
+
+
+body{
+    color:white;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.4)), url("../img/sky.jpg");
+    background-size: cover;
+    font-family: 'Montserrat', sans-serif; 
+    /* font-family: 'Raleway', sans-serif; */
+    
+}
+
+.main-content{
+    flex-grow: 1;
+    background-color: transparent;
+}
+
+footer{
+    color: white;
+    border-top: 1px solid #eeeeeeee;
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+h1{
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+/* header{
+    color: white;
+} */
+header {
+    color: white;
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+header a{
+    color: white;
+    margin-right: 16px;
+    text-decoration: none;
+}
+
+
+.portrait{
     width: 250px;
 }
+
+input{
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+
+button{
+    cursor: pointer;
+    border: 1px solid #88888888;
+    background: #88888888;
+    color: white;
+    padding: 8px;
+}
+
+.wrapper{
+  width: 650px;
+    display:grid;
+    grid-template-columns: 70% 30%;
+    /* margin-right: 200px; */
+}
+
+.wrapper > div {
+    /* background: #eee; */
+    padding: 1em 5em;
+}
+
+.wrapper > div:nth-child(odd) {
+    padding: 0px 0px;
+    text-align: left;
+    background-color:transparent;
+    
+} 
+.wrapper > div:nth-child(even){
+    /* margin: 0 !important; */
+    /* padding: 0 2em !important; */
+    /* background-color: teal; */
+    font-size: 40px;
+    font-weight: 100;
+    line-height: 0.3em;
+    /* text-align: left;
+    margin-right: 0em; */
+    padding: 0px 10px;
+    text-align: right;
+    background-color:transparent;
+}
+
+.sub-temp{
+    font-size: 30px;
+    font-weight: 200;
+}
+
+#minTemp{
+    color: #a6dcef;
+}
+
+button{
+    border-radius: 4px;
+    width: 150px;
+    height: 35px;
+    background-color: rgba(255,255,255,0.05);
+    border: none;
+    outline: none;
+    white-space: nowrap;
+}
+
+.hoverr:hover{
+  background-color: rgba(255,255,255,0.5);
+}
+
+#moreDetails{
+    margin-top: 120px;
+}
+
+
+/* Daily-Houly Button */
+.button-box{
+  border-radius: 4px;
+  height: 35px;
+  width:220px;
+  /* margin: 35px auto; */
+  text-align:left;
+  position: relative;
+  background-color: rgba(255,255,255,0.05);
+  }
+
+.toggle{
+ border: 0;
+ width: 100px;
+ height: 40px;
+ background-color:transparent;
+ border-radius: 4px;
+ padding: 5px;
+ transition: all 300ms ease-in-out;
+}
+#btn{
+   top: 0;
+   left: 0px;
+   position: absolute;
+   width: 110px;
+   height: 100%;
+   border-radius: 4px;
+   background-color: rgba(255,255,255,0.2);
+   transition: all 300ms ease-in-out;
+ }
+
+/* .btn.active{
+  left:110px;
+} */
+
+
+/* ////////////////////////////////////////////////////////// */
+
+/* Modal style */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    -webkit-animation-name: fadeIn; /* Fade in the background */
+    -webkit-animation-duration: 0.4s;
+    animation-name: fadeIn;
+    animation-duration: 0.4s
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: fixed;
+    top: 20;
+    margin: 10% 22.7% ;
+    background-color: #fefefe;
+    width: 50%;
+    height: 60%;
+    -webkit-animation-name: slideIn;
+    -webkit-animation-duration: 0.4s;
+    animation-name: slideIn;
+    animation-duration: 0.4s
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #close2{
+      width:40%;
+      background-color:  rgb(39, 38, 38);
+  }
+  
+  .modal-header {
+    padding: 1px 16px;
+    background-color: rgb(39, 38, 38);
+    color: white;
+  }
+  
+  .modal-body {
+      padding: 10px 50px;
+      color: black;
+      font-size: 20px;
+      font-weight: 900;
+      line-height: 35px;
+    }
+  
+  .modal-footer {
+    padding: 2px 16px;
+    color: white;
+    
+  }
+
+  .modal-values{
+    padding-left: 350px;  
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes slideIn {
+    from {bottom: -300px; opacity: 0} 
+    to {bottom: 0; opacity: 1}
+  }
+  
+  @keyframes slideIn {
+    from {bottom: -300px; opacity: 0}
+    to {bottom: 0; opacity: 1}
+  }
+  
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0} 
+    to {opacity: 1}
+  }
