--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,12 +6,13 @@
     <title>About</title>
     <link rel="icon" href= "/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
+    
 </head>
 
 <body>
     <div class="main-content">
         {{>header}}
-         <img class="portrait" src="/img/minion.jpg">        
+        <p>{{helpText}}</p>
     </div>
     
     {{>footer}}
