--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,18 +11,35 @@ a{
     text-decoration: none;
 }
 
-.container{
+/* .container{
     border-top: 1px solid #eeeeeeee;
-    width: 100%;
-    height: 30%;
+     width: 100%; 
+     height: 30%; 
     background-color:transparent;
-    display: flex;
+    display: flex; 
+
     justify-content: center;
     align-items: center;
+   
+} */
+
+.container{
+    /* background-color: tomato; */
+    border-top: 1px solid #eeeeeeee;
+    float: left;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    outline: none;
+}
+
+.item-a{
+    display: inline-block;
+    width: 31%;
 }
 
 .box{
-    width: 205px;
+    width: 180px;
     height: 205px;
     background-color: transparent;
     border-radius: 10px;
@@ -32,6 +49,7 @@ a{
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    outline: none;
 }
 
 .details{
@@ -69,6 +87,19 @@ a{
 } */
 
 /* responsive for mobile phone */
+@media(min-width: 500px) and (max-width: 667px){
+    .box{
+        width: 90%;
+        height:210px;
+    }
+    .model{
+        height: 50px;
+    }
+    .details p{
+        font-size: 14px;
+        width: 120px;
+    }
+}
 @media(max-width:720){
     .box{
         width: 94%;
@@ -82,12 +113,7 @@ a{
         width: 150px;
     }
 }
-.lSPrev .lSNext{
-    color: black;
-    background-color: black;
-}
 
-#lSPrev{
-    color: black;
-    background-color: black;
+.div11{
+    line-height: 65px;
 }
