--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,3 @@
-/* @keyframes example {
-  0%{display: none;}
-  33%{display: none;}
-  66%{display: none;}
-  100%{display: none;}
-} */
 
 @media (min-width: 500px) and (max-width: 667px){
   .modal{
@@ -69,6 +63,28 @@ body{
     
 }
 
+input{
+  color: white;
+   font-size: 20px;
+  font-weight: 500;
+   cursor: pointer; 
+    border-radius: 4px; 
+     width: 300px;
+    background: rgba(255,255,255,0.07);
+    border: none;
+    outline: none;
+     height: 35px; 
+    
+    
+    padding: 2px;
+    white-space: nowrap;
+}
+
+input.hover{
+  outline: none;
+  background-color: rgba(255,255,255,0.5);
+}
+
 .main-content{
     flex-grow: 1;
     background-color: transparent;
@@ -106,21 +122,13 @@ header a{
     width: 250px;
 }
 
-input{
-    border: 1px solid #cccccc;
-    padding: 8px;
-}
 
-button{
-    cursor: pointer;
-    border: 1px solid #88888888;
-    background: #88888888;
-    color: white;
-    padding: 8px;
-}
+
+/* */
+
 
 .wrapper{
-  width: 650px;
+  width: 100%;
     display:grid;
     grid-template-columns: 70% 30%;
     /* margin-right: 200px; */
@@ -138,12 +146,10 @@ button{
     
 } 
 .wrapper > div:nth-child(even){
-    /* margin: 0 !important; */
-    /* padding: 0 2em !important; */
-    /* background-color: teal; */
+    
     font-size: 40px;
     font-weight: 100;
-    line-height: 0.3em;
+    line-height: 20px;
     /* text-align: left;
     margin-right: 0em; */
     padding: 0px 10px;
@@ -160,8 +166,10 @@ button{
     color: #a6dcef;
 }
 
-button{
+.buttonn{
+   cursor: pointer;
     border-radius: 4px;
+    color: white;
     width: 150px;
     height: 35px;
     background-color: rgba(255,255,255,0.05);
@@ -170,12 +178,38 @@ button{
     white-space: nowrap;
 }
 
+.circlebtn{ /* Green */
+  border: none;
+  color: white;
+  padding: 9px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  background-color: rgba(255,255,255,0.05);
+  cursor: pointer;
+  outline: none;
+  border-radius: 50%;
+}
+
+#prev{
+  transform: rotate(180deg);
+}
+/* button{
+ 
+  border: 1px solid #88888888;
+  background: #88888888;
+  color: white;
+  padding: 8px;
+} */
+
 .hoverr:hover{
   background-color: rgba(255,255,255,0.5);
 }
 
 #moreDetails{
-    margin-top: 120px;
+    margin-top: 180px;
+    position: relative;
 }
 
 
@@ -187,6 +221,7 @@ button{
   /* margin: 35px auto; */
   text-align:left;
   position: relative;
+  margin-top: 85px;
   background-color: rgba(255,255,255,0.05);
   }
 
